added {} I hope in the right places.

--- a/html_templates/secret_agent.html
+++ b/html_templates/secret_agent.html
@@ -1,9 +1,10 @@
 <article>
   <figure>
-    <img src="">
+    <img src= {0}> <!-- took out " " and added {0} --> 
   </figure>
   <section>
     <p class="text-auto-size">
+    {1} <!-- not sure if I should add more -->
     </p>
   </section>
 </article>
