--- a/html_templates/spring_fling.html
+++ b/html_templates/spring_fling.html
@@ -1,7 +1,9 @@
 <article class=\"photo\">
-    <img src=\"\" width=\"100%\" height=\"100%\">
-    <div class=\"photo-overlay\"/>\n  
+    <img src= {0}\"\" width=\"100%\" height=\"100%\"> <!-- added {} before the first slash -->
+    <div class=\"photo-overlay\"/>\n  <!-- should I add {} for the div before /> ? -->
     <section>    
-        <p class=\"text-auto-size\"></p>
+        <p class=\"text-auto-size\">
+        	{1} <!-- added one -->
+        </p>
     </section>
 </article>
