--- a/html_templates/secret_agent.html
+++ b/html_templates/secret_agent.html
@@ -1,10 +1,28 @@
 <article>
   <figure>
-    <img src= {0}> <!-- took out " " and added {0} --> 
+    <img src={0}> <!-- may need quotes? -->
   </figure>
   <section>
     <p class="text-auto-size">
-    {1} <!-- not sure if I should add more -->
+<!-- this was richard's code from earlier:
+"""<article>
+        <section>
+            <ul>
+                <li>{0}</li>
+                <li>{1}</li>
+                <li>{2}</li>
+            </ul>
+        </section>
+    </article>"""
+-->
+    <!-- so this should work (we'll test later)-->
+        <section>
+            <ul>
+                <li>{1}</li>
+                <li>{2}</li>
+                <li>{3}</li>
+            </ul>
+        </section>
     </p>
   </section>
 </article>
