--- a/html_templates/spring_fling.html
+++ b/html_templates/spring_fling.html
@@ -1,9 +1,9 @@
 <article class=\"photo\">
-    <img src= {0}\"\" width=\"100%\" height=\"100%\"> <!-- added {} before the first slash -->
-    <div class=\"photo-overlay\"/>\n  <!-- should I add {} for the div before /> ? -->
+    <img src= {0} width=\"100%\" height=\"100%\"> <!-- I'm not sure whether or not we'll need quotes around the images - we'll test it on glass later tonight -->
+    <div class=\"photo-overlay\"/>\n  
     <section>    
         <p class=\"text-auto-size\">
-        	{1} <!-- added one -->
+        	{1} <!--good-->
         </p>
     </section>
 </article>
