--- a/html_templates/secret_agent.html
+++ b/html_templates/secret_agent.html
@@ -1,21 +1,9 @@
 <article>
   <figure>
-    <img src={0}> <!-- may need quotes? -->
+    <img src={0}></img>
   </figure>
   <section>
     <p class="text-auto-size">
-<!-- this was richard's code from earlier:
-"""<article>
-        <section>
-            <ul>
-                <li>{0}</li>
-                <li>{1}</li>
-                <li>{2}</li>
-            </ul>
-        </section>
-    </article>"""
--->
-    <!-- so this should work (we'll test later)-->
         <section>
             <ul>
                 <li>{1}</li>
