--- a/html_templates/spring_fling.html
+++ b/html_templates/spring_fling.html
@@ -1,3 +1,7 @@
+<!--  spring_fling.html
+{0} image source
+{1} text
+-->
 <article class="photo">
     <img src= {0} width="100%" height="100%">
     <div class="photo-overlay"/>\n  
