--- a/LyonTracks/index.html
+++ b/LyonTracks/index.html
@@ -16,7 +16,7 @@ Released   : 20120817
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>LyonTrakcs</title>
+<title>LyonTracks</title>
 <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
