behind the scenes page, and change group picture

--- a/LyonTracks/about_us.html
+++ b/LyonTracks/about_us.html
@@ -31,11 +31,12 @@ Released   : 20120817
 			<ul>
 				<li><a href="./index.html">LyonTracks</a></li>
 				<li class="current_page_item"><a href="#">About Us</a></li>
-			</ul>
+				<li><a href="./behind_the_scenes.html">Behind the Scenes</a></li>
+		</ul>
 		</div>
 	</div>
 	<div id="banner" class="container">
-		<div class="image-style"><img src="./images/mary_lyon_1.png" width="970" height="320" alt="" /></div>
+		<div class="image-style"><img src="./images/group.jpeg" width="970" height="320" alt="" /></div>
 	</div>
 </div>
 <div id="wrapper">
