--- a/LyonTracks/index.html
+++ b/LyonTracks/index.html
@@ -30,6 +30,7 @@ Released   : 20120817
 			<ul>
 				<li class="current_page_item"><a href="#">LyonTracks</a></li>
 				<li><a href="./about_us.html">About Us</a></li>
+				<li><a href="./behind_the_scenes.html">Behind the Scenes</a></li>
 			</ul>
 		</div>
 	</div>
