--- a/LyonTracks/index.html
+++ b/LyonTracks/index.html
@@ -23,8 +23,10 @@ Released   : 20120817
 <body>
 <div id="header-wrapper">
 	<div id="header" class="container">
-		<div id="logo">
-			<h1>LyonTracks</h1>
+		<div id="logo">	
+			<h1><img src="./images/lyon.jpeg" width="35%"></img>LyonTracks</h1>
+			<!--<img src="./images/LyonTracs_logo.jpeg" width = "20px"/><h1>LyonTracks!</h1>-->
+			
 		</div>
 		<div id="menu">
 			<ul>
